force-app/main/default/objects/Carga__c/Carga__c.object-meta.xml
<CustomObject>
    <label>Carga</label>
    <nameField>
        <label>Identificação</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cargas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>