force-app/main/default/objects/Carga__c/fields/Altura__c.field-meta.xml
<CustomField>
    <fullName>Altura__c</fullName>
    <description>Altura da carga</description>
    <inlineHelpText>Altura da carga</inlineHelpText>
    <label>Altura (cm)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>