force-app/main/default/objects/Carga__c/fields/CargaVoo__c.field-meta.xml
<CustomField>
    <fullName>CargaVoo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Carga base que será transportada no trecho</description>
    <inlineHelpText>Carga base que será transportada no trecho</inlineHelpText>
    <label>Carga do Voo</label>
    <referenceTo>CargaVoo__c</referenceTo>
    <relationshipLabel>Cargas dos Trechos</relationshipLabel>
    <relationshipName>Cargas</relationshipName>
    <type>Lookup</type>
</CustomField>