force-app/main/default/objects/Carga__c/fields/CheckIn__c.field-meta.xml
<CustomField>
    <fullName>CheckIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check In</label>
    <type>Checkbox</type>
</CustomField>