force-app/main/default/objects/Carga__c/fields/CodigoCliente__c.field-meta.xml
<CustomField>
    <fullName>CodigoCliente__c</fullName>
    <formula>CargaVoo__r.CodigoCliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Cliente</label>
    <type>Text</type>
</CustomField>