force-app/main/default/objects/Carga__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descrição</label>
    <type>TextArea</type>
</CustomField>