force-app/main/default/objects/Carga__c/fields/Desembarcando__c.field-meta.xml
<CustomField>
    <fullName>Desembarcando__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desembarcando</label>
    <type>Checkbox</type>
</CustomField>