force-app/main/default/objects/Carga__c/fields/DestinoFinal__c.field-meta.xml
<CustomField>
    <fullName>DestinoFinal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destino final</label>
    <referenceTo>Trecho__c</referenceTo>
    <relationshipLabel>Cargas (Destino final)</relationshipLabel>
    <relationshipName>CargasDestinoFinal</relationshipName>
    <type>Lookup</type>
</CustomField>