force-app/main/default/objects/Carga__c/fields/Etiqueta__c.field-meta.xml
<CustomField>
    <fullName>Etiqueta__c</fullName>
    <formula>TEXT(DestinoFinal__r.CorEtiqueta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etiqueta</label>
    <type>Text</type>
</CustomField>