force-app/main/default/objects/Carga__c/fields/Excluida__c.field-meta.xml
<CustomField>
    <fullName>Excluida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excluida</label>
    <type>Checkbox</type>
</CustomField>