force-app/main/default/objects/Carga__c/fields/IdCarga__c.field-meta.xml
<CustomField>
    <fullName>IdCarga__c</fullName>
    <description>Id do trabalho da importação da importação de csv que criou o registro de carga.</description>
    <label>Id da Carga CSV</label>
    <length>36</length>
    <type>Text</type>
</CustomField>