force-app/main/default/objects/Carga__c/fields/Identificacao__c.field-meta.xml
<CustomField>
    <fullName>Identificacao__c</fullName>
    <formula>CargaVoo__r.Identificacao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identificacao</label>
    <type>Text</type>
</CustomField>