force-app/main/default/objects/Carga__c/fields/IdVoo__c.field-meta.xml
<CustomField>
    <fullName>IdVoo__c</fullName>
    <description>Replica o Id do Voo em que a carga estará presente</description>
    <formula>Trecho__r.Voo__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Replica o Id do Voo em que a carga estará presente</inlineHelpText>
    <label>Id do Voo</label>
    <type>Text</type>
</CustomField>