force-app/main/default/objects/Carga__c/fields/Largura__c.field-meta.xml
<CustomField>
    <fullName>Largura__c</fullName>
    <description>Largura da carga</description>
    <inlineHelpText>Largura da carga</inlineHelpText>
    <label>Largura (cm)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>