force-app/main/default/objects/Carga__c/fields/MotivoRetirada__c.field-meta.xml
<CustomField>
    <fullName>MotivoRetirada__c</fullName>
    <label>Motivo da Transferência/Retirada</label>
    <type>TextArea</type>
</CustomField>