force-app/main/default/objects/Carga__c/fields/NomeCliente__c.field-meta.xml
<CustomField>
    <fullName>NomeCliente__c</fullName>
    <formula>Trecho__r.Voo__r.Cliente__r.Name</formula>
    <label>Nome do Cliente</label>
    <type>Text</type>
</CustomField>