force-app/main/default/objects/Carga__c/fields/NoShow__c.field-meta.xml
<CustomField>
    <fullName>NoShow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Show</label>
    <type>Checkbox</type>
</CustomField>