force-app/main/default/objects/Carga__c/fields/OrdemTrecho__c.field-meta.xml
<CustomField>
    <fullName>OrdemTrecho__c</fullName>
    <formula>Trecho__r.OrdemExecucao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordem trecho</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>