force-app/main/default/objects/Carga__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origem</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Cargas</relationshipLabel>
    <relationshipName>CargasOrigem</relationshipName>
    <type>Lookup</type>
</CustomField>