force-app/main/default/objects/Carga__c/fields/Passageiro__c.field-meta.xml
<CustomField>
    <fullName>Passageiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passageiro</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cargas</relationshipLabel>
    <relationshipName>Cargas</relationshipName>
    <type>Lookup</type>
</CustomField>