force-app/main/default/objects/Carga__c/fields/PassageiroDel__c.field-meta.xml
<CustomField>
    <fullName>PassageiroDel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passageiro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Trecho__c</field>
            <operation>equals</operation>
            <valueField>Passageiro__c.Trecho__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Passageiro__c</referenceTo>
    <relationshipLabel>Cargas</relationshipLabel>
    <relationshipName>Cargas</relationshipName>
    <type>Lookup</type>
</CustomField>