force-app/main/default/objects/Carga__c/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <description>Define o peso em kg da carga</description>
    <inlineHelpText>Define o peso em kg da carga</inlineHelpText>
    <label>Peso (kg)</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>