force-app/main/default/objects/Carga__c/fields/PesoUnitario__c.field-meta.xml
<CustomField>
    <fullName>PesoUnitario__c</fullName>
    <description>Peso da unidade da carga do voo em kg</description>
    <inlineHelpText>Peso da unidade da carga do voo em kg</inlineHelpText>
    <label>Peso Unitário (kg)</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>