force-app/main/default/objects/Carga__c/fields/Profundidade__c.field-meta.xml
<CustomField>
    <fullName>Profundidade__c</fullName>
    <description>Profundidade da carga</description>
    <inlineHelpText>Profundidade da carga</inlineHelpText>
    <label>Profundidade (cm)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>