force-app/main/default/objects/Carga__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <description>Quantidade de unidades a serem transportada no trecho</description>
    <inlineHelpText>Quantidade de unidades a serem transportada no trecho</inlineHelpText>
    <label>Quantidade</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>