force-app/main/default/objects/Carga__c/fields/Rota__c.field-meta.xml
<CustomField>
    <fullName>Rota__c</fullName>
    <formula>Origem__r.CodigoLocal__c +&apos; &gt; &apos;+ Destino__r.CodigoLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rota</label>
    <type>Text</type>
</CustomField>