force-app/main/default/objects/Carga__c/fields/RT__c.field-meta.xml
<CustomField>
    <fullName>RT__c</fullName>
    <label>Nº RT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>