force-app/main/default/objects/Carga__c/fields/StatusVoo__c.field-meta.xml
<CustomField>
    <fullName>StatusVoo__c</fullName>
    <description>Replica o Status do Voo em Carga</description>
    <formula>Trecho__r.StatusVoo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Replica o Status do Voo em Carga</inlineHelpText>
    <label>Status do Voo</label>
    <type>Text</type>
</CustomField>