force-app/main/default/objects/Carga__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desacompanhada</fullName>
                <default>true</default>
                <label>Desacompanhada</label>
            </value>
            <value>
                <fullName>Acompanhada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>