force-app/main/default/objects/Carga__c/fields/Transferida__c.field-meta.xml
<CustomField>
    <fullName>Transferida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transferida</label>
    <type>Checkbox</type>
</CustomField>