force-app/main/default/objects/Carga__c/fields/TransferidoParaCargaVoo__c.field-meta.xml
<CustomField>
    <fullName>TransferidoParaCargaVoo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferido Para Voo</label>
    <referenceTo>CargaVoo__c</referenceTo>
    <relationshipLabel>Cargas (Transferido Para Voo)</relationshipLabel>
    <relationshipName>CargasTransferidoPara</relationshipName>
    <type>Lookup</type>
</CustomField>