force-app/main/default/objects/Carga__c/fields/TransferidoParaVoo__c.field-meta.xml
<CustomField>
    <fullName>TransferidoParaVoo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferido para</label>
    <referenceTo>Voo__c</referenceTo>
    <relationshipLabel>Cargas</relationshipLabel>
    <relationshipName>CargasTransferidoParaVoo</relationshipName>
    <type>Lookup</type>
</CustomField>