force-app/main/default/objects/Carga__c/fields/Trecho__c.field-meta.xml
<CustomField>
    <fullName>Trecho__c</fullName>
    <description>Trecho o qual a carga pertence</description>
    <inlineHelpText>Trecho o qual a carga pertence</inlineHelpText>
    <label>Trecho</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Trecho Em Rota ou Finalizado</errorMessage>
        <filterItems>
            <field>Trecho__c.Status__c</field>
            <operation>equals</operation>
            <value>Não Iniciado</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Trecho__c</referenceTo>
    <relationshipLabel>Cargas</relationshipLabel>
    <relationshipName>Cargas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>