force-app/main/default/objects/Carga__c/validationRules/BloqueiaIntegracaoStar.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiaIntegracaoStar</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				$Setup.ConfiguracoesGerais__c.IdPerfilIntegracaoStar__c = $Profile.Id,
				OR(
								StatusVoo__c = &apos;Em Faturamento&apos;,
								StatusVoo__c = &apos;Faturado&apos;
				)
)</errorConditionFormula>
    <errorMessage>Integração não permitida no Status atual</errorMessage>
</ValidationRule>