force-app/main/default/objects/Carga__c/validationRules/CheckInNoShow.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckInNoShow</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CheckIn__c, NoShow__c, ISCHANGED(NoShow__c) )</errorConditionFormula>
    <errorDisplayField>NoShow__c</errorDisplayField>
    <errorMessage>Check In e No Show não podem ser marcados simultaneamente</errorMessage>
</ValidationRule>