force-app/main/default/objects/Carga__c/validationRules/LimpePeso.validationRule-meta.xml
<ValidationRule>
    <fullName>LimpePeso</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( NoShow__c ),
NoShow__c,
NOT(ISBLANK(Peso__c)))</errorConditionFormula>
    <errorDisplayField>NoShow__c</errorDisplayField>
    <errorMessage>Limpe o campo Peso</errorMessage>
</ValidationRule>