force-app/main/default/objects/Carga__c/validationRules/LimpeQuantidade.validationRule-meta.xml
<ValidationRule>
    <fullName>LimpeQuantidade</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( NoShow__c ),
NoShow__c,
NOT(ISBLANK(Quantidade__c)))</errorConditionFormula>
    <errorDisplayField>NoShow__c</errorDisplayField>
    <errorMessage>Limpe o campo Quantidade</errorMessage>
</ValidationRule>