force-app/main/default/objects/Carga__c/validationRules/NoShowCheckIn.validationRule-meta.xml
<ValidationRule>
    <fullName>NoShowCheckIn</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CheckIn__c, NoShow__c, ISCHANGED(CheckIn__c) )</errorConditionFormula>
    <errorDisplayField>CheckIn__c</errorDisplayField>
    <errorMessage>Check In e No Show não podem ser marcados simultaneamente</errorMessage>
</ValidationRule>