force-app/main/default/objects/Carga__c/validationRules/preenchaPeso.validationRule-meta.xml
<ValidationRule>
    <fullName>preenchaPeso</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( CheckIn__c ),
CheckIn__c ,
ISBLANK(Peso__c))</errorConditionFormula>
    <errorDisplayField>CheckIn__c</errorDisplayField>
    <errorMessage>Preencha o campo Peso</errorMessage>
</ValidationRule>