force-app/main/default/objects/Carga__c/validationRules/preenchaQuantidade.validationRule-meta.xml
<ValidationRule>
    <fullName>preenchaQuantidade</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( CheckIn__c ),
CheckIn__c ,
(ISBLANK(Quantidade__c)))</errorConditionFormula>
    <errorDisplayField>CheckIn__c</errorDisplayField>
    <errorMessage>Preencha o campo Quantidade</errorMessage>
</ValidationRule>