force-app/main/default/objects/Carga__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Peso__c</columns>
    <columns>Altura__c</columns>
    <columns>Largura__c</columns>
    <columns>Profundidade__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>