force-app/main/default/objects/Carga__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Peso__c</columns>
    <columns>Altura__c</columns>
    <columns>Largura__c</columns>
    <columns>Profundidade__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>